# rsearch

./: .gitignore  :q  CMakeLists.txt  README.md  configure  configure.h.in  env.sh  makefile.inc
backend/: init.py  start.sh
backend/rsearch_backend/: db.sqlite3  manage.py  run.sh
backend/rsearch_backend/dataset/: 1595502622.sqlite3
backend/rsearch_backend/model/: models.py
backend/rsearch_backend/model/migrations/: 0001_initial.py
backend/rsearch_backend/rsearch/: handle_rsearch.py  rsearch.py
backend/rsearch_backend/rsearch_backend/: .database.py.swp  CMH.py  Encoder.py  Image1000.db  SolveCrossDomain.py  backend.py  database.py  init_db.py  settings.py  urls.py  utils.py  wsgi.py
backend/rsearch_backend/rsearch_backend/model/: Labels.txt
frontend/: demo.html
frontend/rsearch/: manage.py
frontend/rsearch/data/: models.py
frontend/rsearch/rsearch/: backend.py  settings.py  urls.py  wsgi.py
frontend/rsearch/templates/: demo.html
frontend/stylesheets/: bootstrap3.css  fonts.css
include/: configure.h  pipe.h  rsearch.h  rsearch_def.h  rsearch_type.h
include/gallery/: cpu_base_gallery.h  faiss_gallery.h  faiss_lsh_gallery.h  ivf_gallery.h  pqivf_gallery.h  rsearch_gallery.h
include/matrix/: base_matrix_mul.h  load_add.h  matrix_la.h  matrix_mul.h  rapid_load_add.h  rapid_matrix_la.h  rapid_matrix_mul.h
include/other/: other.h  simple_gallery.h  simple_index.h
include/probe/: cpu_base_mt_probe.h  cpu_base_probe.h  faiss_probe.h  pqivf_mt_probe.h  pqivf_probe.h  rsearch_probe.h
include/utils/: MthManager.h  ThreadPool.h  avx2_asm.h  cluster.h  helpers.h  topk_select.h  utils.h
python/: Makefile  demo.py  rsearch.py  setup.py  swigrsearch.swig  swigrsearch_wrap.cpp
python/pybind/: interface.cpp
python/python_file/: handle_rsearch.py
python/rsearch/: handle_rsearch.py
src/: rsearch.cpp
src/gallery/: cpu_base_gallery.cpp  faiss_gallery.cpp  ivf_gallery.cpp  pqivf_gallery.cpp
src/matrix/: base_matrix_mul.cpp  rapid_load_add.cpp  rapid_matrix_la.cpp  rapid_matrix_mul.cpp
src/other/: simple_gallery.cpp  simple_index.cpp
src/probe/: cpu_base_mt_probe.cpp  cpu_base_probe.cpp  faiss_probe.cpp  pqivf_mt_probe.cpp  pqivf_probe.cpp  probe.cpp
src/utils/: MthManager.cpp  ThreadPool.cpp  avx2_asm.cpp  cluster.cpp  cluster_mt.cpp  topk_select.cpp  utils.cpp
test/: demo.cpp
test/benchmark/: benchmark_query_pref.cpp  benchmark_rapid_int8.cpp  benchmark_rapid_la.cpp  benchmark_rapid_mul.cpp
test/unit_test/: test_compare.cpp  test_kmeans.cpp  test_matrix.cpp  test_other.cpp  test_query.cpp  test_thread_pool.cpp  test_topk_select.cpp  unit_test.cpp  unit_test.h
